src/test/deca/syntax/invalid/avecObjet/asm_meth_no_string_body.deca
class A {
    void A asm(int x);
}